# intergalactic-planetary

./: .gitignore  LICENSE  README.md
backend/: .gitignore  Cargo.toml  README.md
backend/contracts/cw721-data/: Cargo.toml  NOTICE
backend/contracts/cw721-data/examples/: schema.rs
backend/contracts/cw721-data/schema/: admin_response.json  execute_msg.json  instantiate_msg.json  nft_info_response.json  query_msg.json
backend/contracts/cw721-data/src/: contract_tests.rs  error.rs  execute.rs  extension.rs  lib.rs  msg.rs  query.rs  state.rs
frontend/: .eslintrc  .gitignore  README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  Icons.tsx  index.js  index.scss
frontend/src/components/: Loading.scss  Loading.tsx  Menu.scss  Menu.tsx  Notifications.scss  Notifications.tsx  SearchButton.scss  SearchButton.tsx  Wallet.scss  Wallet.tsx
frontend/src/components/modals/: AboutModal.tsx  ConfirmationModal.tsx  MintModal.scss  MintModal.tsx  Modal.scss  Modal.tsx  SaveModal.tsx  UpdatedPlanetsModal.tsx
frontend/src/hooks/: useGlobalState.ts
frontend/src/pages/: ExploreMode.tsx  Galaxy.scss  Galaxy.tsx  PlanetToolbar.scss  PlanetToolbar.tsx  PlanetViewer.tsx  SolarSystem.scss  SolarSystem.tsx  VoxelToolbar.scss  VoxelToolbar.tsx
frontend/src/scripts/: Api.ts  GalacticSpec.ts  ModelLoader.ts  Settings.ts  Utility.ts  api.ts  base-64.ts  model-loader.ts  music.ts  settings.ts
frontend/src/scripts/Objects/: Axes.ts  Background.ts  BlackHole.ts  (+13 more)
frontend/src/styles/: _colors.scss  _globals.scss  _main.scss
(+86 files in other folders)
