[package]
name = "cw721-data"
version = "0.9.1"
authors = ["Eric Lutzen <elutzen@users.noreply.github.com>"]
edition = "2018"
description = "Mutable data adation of base implementation cw721 NFTs"
license = "Apache-2.0"
repository = ""

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw0 = { version = "0.9.0" }
cw2 = { version = "0.9.0" }
cw721 = { path = "../../packages/cw721", version = "0.9.0" }
cw-storage-plus = { version = "0.9.0" }
cosmwasm-std = { version = "0.16.0" , features = ["staking"] }
terra-cosmwasm = "2.2.0"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
terraswap = "2.4.0"
hex = "0.4"
sha2 = { version = "0.9.5", default-features = false }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
serde_json = "1.0"